# Gameboy-emulator

./: .gitignore  README.txt  main.c
GBEmulator/: main.c
Include/: apu.h  audio.h  cart.h  common.h  cpu.h  emu.h  instructions.h  interrupts.h  ppu.h  timer.h  ui.h
gbemu/: CMakeLists.txt
lib/: apu.c  audio.c  bus.c  cart.c  cpu.c  cpu.util.c  cpu_fetch.c  cpu_proc.c  cpu_util.c  dbg.c  dma.c  emu.c  gamepad.c  instructions.c  interrupts.c  io.c  lcd.c  ppu.c  ppu_sm.c  ram.c  stack.c  timer.c  ui.c
saves/: Links-Awakening.gb.battery
tests/: CMakeLists.txt
